--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
   <script src="assets/js/main.js"></script>
 
   <!-- DASHBOARD JS -->
-  <script src="assets/js/dashboards-analytics.js"></script>
+  <!-- <script src="assets/js/dashboards-analytics.js"></script> -->
 </body>
 
 </html>
