--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" class="light-style layout-menu-fixed" dir="ltr" data-theme="theme-default" data-assets-path="assets/" data-template="horizontal-menu-template">
+<html lang="en" class="light-style layout-menu-fixed" dir="ltr" data-theme="theme-default"
+  data-assets-path="../../assets/" data-template="horizontal-menu-template">
 
 <head>
   <meta charset="utf-8" />
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
 
-  <title>Dashboard - SIMPEL</title>
+  <title>SIMPEL MONITORING</title>
 
   <meta name="description" content="" />
 
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+
   <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="assets/img/favicon/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="../../assets/img/logo.svg" />
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -20,67 +23,75 @@
     href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
     rel="stylesheet" />
 
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/tabler-icons.min.css">
+  <!-- <link rel="stylesheet" href="../../assets/vendor/libs/leaflet/leaflet.css" /> -->
+  <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" /> -->
+  <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" /> -->
+  <link rel="stylesheet" href="../../assets/leaflet/leaflet.css" />
+
   <!-- Icons -->
-  <link rel="stylesheet" href="assets/vendor/fonts/fontawesome.css" />
-  <link rel="stylesheet" href="assets/vendor/fonts/tabler-icons.css" />
-  <link rel="stylesheet" href="assets/vendor/fonts/flag-icons.css" />
+  <link rel="stylesheet" href="../../assets/vendor/fonts/fontawesome.css" />
+  <link rel="stylesheet" href="../../assets/vendor/fonts/tabler-icons.css" />
+  <link rel="stylesheet" href="../../assets/vendor/fonts/flag-icons.css" />
 
   <!-- Core CSS -->
-  <link rel="stylesheet" href="assets/vendor/css/rtl/core.css" class="template-customizer-core-css" />
-  <link rel="stylesheet" href="assets/vendor/css/rtl/theme-default.css" class="template-customizer-theme-css" />
-  <link rel="stylesheet" href="assets/css/demo.css" />
+  <link rel="stylesheet" href="../../assets/vendor/css/rtl/core.css" class="template-customizer-core-css" />
+  <link rel="stylesheet" href="../../assets/vendor/css/rtl/theme-default.css" class="template-customizer-theme-css" />
+  <link rel="stylesheet" href="../../assets/css/demo.css" />
 
-  <!-- DASHBOARD CSS -->
-  <link rel="stylesheet" href="assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
-  <link rel="stylesheet" href="assets/vendor/libs/node-waves/node-waves.css" />
-  <link rel="stylesheet" href="assets/vendor/libs/typeahead-js/typeahead.css" />
-  <link rel="stylesheet" href="assets/vendor/libs/apex-charts/apex-charts.css" />
-  <link rel="stylesheet" href="assets/vendor/libs/swiper/swiper.css" />
-  <link rel="stylesheet" href="assets/vendor/libs/datatables-bs5/datatables.bootstrap5.css" />
-  <link rel="stylesheet" href="assets/vendor/libs/datatables-responsive-bs5/responsive.bootstrap5.css" />
-  <link rel="stylesheet" href="assets/vendor/libs/datatables-checkboxes-jquery/datatables.checkboxes.css" />
+  <!-- Vendors CSS -->
+  <link rel="stylesheet" href="../../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
+  <link rel="stylesheet" href="../../assets/vendor/libs/node-waves/node-waves.css" />
+  <link rel="stylesheet" href="../../assets/vendor/libs/typeahead-js/typeahead.css" />
+  <link rel="stylesheet" href="../../assets/vendor/libs/apex-charts/apex-charts.css" />
+  <link rel="stylesheet" href="../../assets/vendor/libs/swiper/swiper.css" />
+  <link rel="stylesheet" href="../../assets/vendor/libs/datatables-bs5/datatables.bootstrap5.css" />
+  <link rel="stylesheet" href="../../assets/vendor/libs/datatables-responsive-bs5/responsive.bootstrap5.css" />
+  <link rel="stylesheet" href="../../assets/vendor/libs/datatables-checkboxes-jquery/datatables.checkboxes.css" />
 
-  <!-- LEAFLET CSS -->
-  <link rel="stylesheet" href="assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
-  <link rel="stylesheet" href="assets/vendor/libs/node-waves/node-waves.css" />
-  <link rel="stylesheet" href="assets/vendor/libs/typeahead-js/typeahead.css" />
-  <link rel="stylesheet" href="assets/vendor/libs/leaflet/leaflet.css" />
+  <link rel="stylesheet" href="../../assets/vendor/libs/datatables-bs5/datatables.bootstrap5.css" />
+  <link rel="stylesheet" href="../../assets/vendor/libs/datatables-responsive-bs5/responsive.bootstrap5.css" />
+  <link rel="stylesheet" href="../../assets/vendor/libs/datatables-checkboxes-jquery/datatables.checkboxes.css" />
 
-  <!-- DATATABLE CSS -->
-  <link rel="stylesheet" href="assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
-  <link rel="stylesheet" href="assets/vendor/libs/node-waves/node-waves.css" />
-  <link rel="stylesheet" href="assets/vendor/libs/typeahead-js/typeahead.css" />
-  <link rel="stylesheet" href="assets/vendor/libs/datatables-bs5/datatables.bootstrap5.css" />
-  <link rel="stylesheet" href="assets/vendor/libs/datatables-responsive-bs5/responsive.bootstrap5.css" />
-  <link rel="stylesheet" href="assets/vendor/libs/datatables-checkboxes-jquery/datatables.checkboxes.css" />
-  <link rel="stylesheet" href="assets/vendor/libs/datatables-buttons-bs5/buttons.bootstrap5.css" />
-  <link rel="stylesheet" href="assets/vendor/libs/flatpickr/flatpickr.css" />
 
-  <!-- DATEPICKER CSS -->
-  <link rel="stylesheet" href="assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
-  <link rel="stylesheet" href="assets/vendor/libs/node-waves/node-waves.css" />
-  <link rel="stylesheet" href="assets/vendor/libs/typeahead-js/typeahead.css" />
-  <link rel="stylesheet" href="assets/vendor/libs/flatpickr/flatpickr.css" />
-  <link rel="stylesheet" href="assets/vendor/libs/bootstrap-datepicker/bootstrap-datepicker.css" />
-  <link rel="stylesheet" href="assets/vendor/libs/bootstrap-daterangepicker/bootstrap-daterangepicker.css" />
-  <link rel="stylesheet" href="assets/vendor/libs/jquery-timepicker/jquery-timepicker.css" />
-  <link rel="stylesheet" href="assets/vendor/libs/pickr/pickr-themes.css" />
-
+  <link rel="stylesheet" href="../../assets/vendor/libs/bootstrap-datepicker/bootstrap-datepicker.css" />
+  <link rel="stylesheet" href="../../assets/vendor/libs/bootstrap-daterangepicker/bootstrap-daterangepicker.css" />
+  <link rel="stylesheet" href="../../assets/vendor/libs/jquery-timepicker/jquery-timepicker.css" />
+  <link rel="stylesheet" href="../../assets/vendor/libs/pickr/pickr-themes.css" />
 
   <!-- Page CSS -->
-  <link rel="stylesheet" href="assets/vendor/css/pages/cards-advance.css" />
+  <link rel="stylesheet" href="../../assets/vendor/css/pages/cards-advance.css" />
   <!-- Helpers -->
-  <script src="assets/vendor/js/helpers.js"></script>
+  <script src="../../assets/vendor/js/helpers.js"></script>
 
   <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
   <!--? Template customizer: To hide customizer set displayCustomizer value false in config.js.  -->
-  <script src="assets/vendor/js/template-customizer.js"></script>
+  <script src="../../assets/vendor/js/template-customizer.js"></script>
   <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
-  <script src="assets/js/config.js"></script>
+  <script src="../../assets/js/config.js"></script>
 
-  <script src="assets/vendor/libs/jquery/jquery.js"></script>
 
-  <style>
+  <style scoped>
+    body {
+      overflow-x: hidden;
+    }
+
+    body::-webkit-scrollbar {
+      width: 10px;
+    }
+
+    body::-webkit-scrollbar-track {
+      background: rgba(182, 220, 255, 0.204);
+      border: 1px solid rgba(0, 0, 0, 0.405)
+    }
+
+    body::-webkit-scrollbar-thumb {
+      background-color: #7367f0;
+      border-radius: 20px;
+    }
+
     .btn-detail-kapal {
       color: white;
       background-color: #1c6487;
@@ -151,9 +162,7 @@
       }
     }
 
-
     /*Shrinking for mobile*/
-
     @media (max-width: 768px) {
       .waves {
         height: 40px;
@@ -169,61 +178,67 @@
   <!-- Layout wrapper -->
 
   <div id="app"></div>
-  <script type="module" src="/src/main.js"></script>
-  
+  <script type="module" src="../../src/main.js"></script>
+
   <!--/ Layout wrapper -->
 
+  <!-- <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script> -->
+  <link rel="stylesheet" href="../../assets/leaflet/leaflet.js" />
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
   <!-- Core JS -->
+  <script src="../../assets/js/ui-popover.js"></script>
+  <!-- <script src="../../assets/js/maps-leaflet.js"></script> -->
+
   <!-- build:js assets/vendor/js/core.js -->
-  <script src="assets/vendor/libs/popper/popper.js"></script>
-  <script src="assets/vendor/js/bootstrap.js"></script>
-  <script src="assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
-  <script src="assets/vendor/libs/node-waves/node-waves.js"></script>
+  <script src="../../assets/vendor/js/menu.js"></script>
+  <script src="../../assets/vendor/js/bootstrap.js"></script>
+  <script src="../../assets/vendor/libs/i18n/i18n.js"></script>
+  <script src="../../assets/vendor/libs/pickr/pickr.js"></script>
 
-  <script src="assets/vendor/libs/hammer/hammer.js"></script>
-  <script src="assets/vendor/libs/i18n/i18n.js"></script>
-  <script src="assets/vendor/libs/typeahead-js/typeahead.js"></script>
+  <script src="../../assets/vendor/libs/swiper/swiper.js"></script>
+  <script src="../../assets/vendor/libs/popper/popper.js"></script>
+  <script src="../../assets/vendor/libs/hammer/hammer.js"></script>
+  <script src="../../assets/vendor/libs/moment/moment.js"></script>
 
-  <script src="assets/vendor/js/menu.js"></script>
-  <!-- endbuild -->
+  <!-- <script src="../../assets/vendor/libs/leaflet/leaflet.js"></script> -->
+  <!-- <script src="../../assets/vendor/libs/select2/select2.js"></script> -->
+  <script src="../../assets/vendor/libs/cleavejs/cleave.js"></script>
+  <!-- <script src="../../assets/js/tables-datatables-basic.js"></script> -->
 
-  <!-- DASHBOARD JS -->
-  <script src="assets/vendor/libs/apex-charts/apexcharts.js"></script>
-  <script src="assets/vendor/libs/swiper/swiper.js"></script>
-  <script src="assets/vendor/libs/datatables-bs5/datatables-bootstrap5.js"></script>
+  <script src="../../assets/vendor/libs/cleavejs/cleave-phone.js"></script>
+  <script src="../../assets/vendor/libs/node-waves/node-waves.js"></script>
+  <!-- <script src="../../assets/vendor/libs/typeahead-js/typeahead.js"></script> -->
+  <script src="../../assets/vendor/libs/apex-charts/apexcharts.js"></script>
 
-  <!-- DATATABLE JS -->
-  <!-- <script src="assets/js/tables-datatables-basic.js"></script> -->
-  <script src="assets/vendor/libs/moment/moment.js"></script>
-  <script src="assets/vendor/libs/datatables-bs5/datatables-bootstrap5.js"></script>
-  <script src="assets/vendor/libs/select2/select2.js"></script>
-  <!-- <script src="assets/vendor/libs/formvalidation/dist/js/FormValidation.min.js"></script> -->
-  <!-- <script src="assets/vendor/libs/formvalidation/dist/js/plugins/Bootstrap5.min.js"></script> -->
-  <!-- <script src="assets/vendor/libs/formvalidation/dist/js/plugins/AutoFocus.min.js"></script> -->
-  <script src="assets/vendor/libs/cleavejs/cleave.js"></script>
-  <script src="assets/vendor/libs/cleavejs/cleave-phone.js"></script>
-  <!-- <script src="assets/js/app-user-list.js"></script> -->
+  <!-- <script src="../../assets/vendor/libs/jquery-timepicker/jquery-timepicker.js"></script> -->
+  <script src="../../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
+  <!-- <script src="../../assets/vendor/libs/datatables-bs5/datatables-bootstrap5.js"></script> -->
 
-  <!-- LEAFLET JS -->
-  <script src="assets/vendor/libs/leaflet/leaflet.js"></script>
-  <script src="assets/js/maps-leaflet.js"></script>
+  <!-- <script src="../../assets/vendor/libs/bootstrap-datepicker/bootstrap-datepicker.js"></script> -->
+  <!-- <script src="../../assets/vendor/libs/bootstrap-daterangepicker/bootstrap-daterangepicker.js"></script> -->
 
-  <!-- DATETIME JS -->
-  <script src="assets/vendor/libs/moment/moment.js"></script>
-  <!-- <script src="assets/vendor/libs/flatpickr/flatpickr.js"></script> -->
-  <script src="assets/vendor/libs/bootstrap-datepicker/bootstrap-datepicker.js"></script>
-  <script src="assets/vendor/libs/bootstrap-daterangepicker/bootstrap-daterangepicker.js"></script>
-  <script src="assets/vendor/libs/jquery-timepicker/jquery-timepicker.js"></script>
-  <!-- <script src="assets/vendor/libs/pickr/pickr.js"></script> -->
-  <!-- <script src="assets/js/forms-pickers.js"></script> -->
+
+  <!-- FORM VALIDATION -->
+  <!-- <script src="../../assets/js/form-validation.js"></script> -->
+  <!-- <script src="../../assets/vendor/libs/formvalidation/dist/js/FormValidation.min.js"></script> -->
+  <!-- <script src="../../assets/vendor/libs/formvalidation/dist/js/plugins/Bootstrap5.min.js"></script> -->
+  <!-- <script src="../../assets/vendor/libs/formvalidation/dist/js/plugins/AutoFocus.min.js"></script> -->
 
   <!-- Main JS -->
-  <script src="assets/js/main.js"></script>
+  <script src="../../assets/js/main.js"></script>
 
-  <!-- DASHBOARD JS -->
-  <!-- <script src="assets/js/dashboards-analytics.js"></script> -->
+
+  <!-- <script src="../../assets/vendor/libs/bootstrap-datepicker/bootstrap-datepicker.js"></script>
+  <script src="../../assets/vendor/libs/bootstrap-daterangepicker/bootstrap-daterangepicker.js"></script>
+  <script src="../../assets/vendor/libs/jquery-timepicker/jquery-timepicker.js"></script>
+  <script src="../../assets/vendor/libs/pickr/pickr.js"></script>
+  <script src="../../assets/js/forms-pickers.js"></script> -->
+
+  <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-KuyteYp1DYW8KdRT6L1M7nB_GfAER00"></script>
 </body>
 
 </html>
