--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" /> -->
   <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" /> -->
-  <link rel="stylesheet" href="../../assets/leaflet/leaflet.css" />
+  <!-- <link rel="stylesheet" href="../../assets/leaflet/leaflet.css" /> -->
 
   <!-- Icons -->
   <link rel="stylesheet" href="../../assets/vendor/fonts/fontawesome.css" />
@@ -184,7 +184,7 @@
 
   <!-- <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script> -->
-  <link rel="stylesheet" href="../../assets/leaflet/leaflet.js" />
+  <!-- <link rel="stylesheet" href="../../assets/leaflet/leaflet.js" /> -->
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
