dashboard ship detail

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
 
   <!-- ICON  -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/tabler-icons.min.css">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 
   <style>
     /* For WebKit-based browsers (Chrome, Safari) */
