--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <link rel="icon" href="<%= BASE_URL %>src/assets/app/s-logo.svg" type="image/svg+xml">
   <title data-rightJoin="SIMPEL"> SIMPEL
   </title>
   <meta name="description" content="SIMPEL - Sistem Monitoring Pelabuhan">
-  <meta name="keywords" content="iwan, harli, simpel, kapal, pelabuhan">
-  <meta name="author" content="Iwan Harli">
+  <meta name="keywords" content="simpel, kapal, pelabuhan">
+  <meta name="author" content="Iwan, Taufiq, Wildan, Condro">
 
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
